<resources>
    <string name="app_name">Stomp Covid Rumors</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="username">Set your Username</string>
    <string name="registerUserName">Username/Email</string>
    <string name="disclaimerText">Login with \'@umd.admin.edu\' email to approve/disapprove rumors</string>
    <string name="password">Change your Password</string>
    <string name="login_username">Username</string>s
    <string name="login_password">Password</string>
    <string name="home">Home</string>
    <string name="timeline">Timeline</string>
    <string name="search">Search</string>
    <string name="searchLocate">Search by Location</string>
    <string name="new_post">Add Rumor</string>
    <string name="new_post_menu">New Rumor</string>
    <string name="submit_post">Submit Post</string>
    <string name="what">Type Rumor Details</string>
    <string name="where">Location of the COVID-19 Rumor</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="logout">Log Out</string>
</resources>