<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:color="@color/color_black"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/home"/>
    <item
        android:id="@+id/search"
        android:color="@color/color_black"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search"/>
    <item
        android:id="@+id/new_post"
        android:color="@color/color_green"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        android:title="@string/new_post_menu"/>
    <item
        android:id="@+id/profile"
        android:color="@color/color_black"
        android:icon="@drawable/ic_user"
        app:showAsAction="always"
        android:title="@string/profile"/>
</menu>